--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>About this Package</h3>
 
-<p>I (<a href="https://github.com/ejanalysis" class="user-mention">@ejanalysis</a>) developed this package in 2015 as a way to give R users easier access to the excellent data at <a href="http://countyhealthrankings.org">countyhealthrankings.org</a>.
-This package provides their 2014 and 2015 datasets, imported to R as a data.frame, to facilitate use of the data in R. Source of original data: <a href="http://www.countyhealthrankings.org/about-project">http://www.countyhealthrankings.org/about-project</a> -- Obtained 3/27/2015 and slightly modified to provide 5 digit FIPS as character field, and ST field as copy of State field.</p>
+<p>The countyhealthrankings package was developed as a way to give R users easier access to the excellent data at <a href="http://www.countyhealthrankings.org">CountyHealthRankings.org</a>. This package provides their 2014 and 2015 datasets, imported to R as a data.frame, to facilitate use of the data in R. The source of the original data is documented here: <a href="http://www.countyhealthrankings.org/about-project">countyhealthrankings.org/about-project</a> -- I obtained the data 3/27/2015 and slightly modified it to provide 5-digit FIPS as a character field, and the State 2-character abbreviation field renamed as ST.</p>
 
 
       <footer class="site-footer">
