edits to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Countyhealthrankings by ejanalysis</title>
+    <title>countyhealthrankings package</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Countyhealthrankings</h1>
-      <h2 class="project-tagline">Data from countyhealthrankings.org</h2>
+      <h1 class="project-name">countyhealthrankings package</h1>
+      <h2 class="project-tagline">Data from countyhealthrankings.org for R</h2>
       <a href="https://github.com/ejanalysis/countyhealthrankings" class="btn">View on GitHub</a>
       <a href="https://github.com/ejanalysis/countyhealthrankings/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/ejanalysis/countyhealthrankings/tarball/master" class="btn">Download .tar.gz</a>
@@ -35,7 +35,7 @@
 
     </section>
 
-  
+
   </body>
 </html>
 
