add link to help pdf from package webpage

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <p>The countyhealthrankings package was developed as a way to give R users easier access to the excellent data at <a href="http://www.countyhealthrankings.org">CountyHealthRankings.org</a>. This package provides their 2014 and 2015 datasets, imported to R as a data.frame, to facilitate use of the data in R. The source of the original data is documented here: <a href="http://www.countyhealthrankings.org/about-project">countyhealthrankings.org/about-project</a> -- I obtained the data 3/27/2015 and slightly modified it to provide 5-digit FIPS as a character field, and the State 2-character abbreviation field renamed as ST.</p>
 
+ <p><a href="http://ejanalysis.github.io/countyhealthrankings/countyhealthrankings.pdf">Help documentation as pdf</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ejanalysis/countyhealthrankings">Countyhealthrankings</a> is maintained as part of a group of <a href="http://ejanalysis.github.io/">packages related to EJ analysis</a>, by <a href="https://github.com/ejanalysis">ejanalysis</a>.</span>
