--- a/index.html
+++ b/index.html
@@ -20,13 +20,25 @@
 
     <section class="main-content">
 
-
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>About this Package</h3>
+<a id="about-this-package" class="anchor" href="#about-this-package" aria-hidden="true"><span class="octicon octicon-link"></span></a>About this Package</h3>
 
 <p>The countyhealthrankings package was developed as a way to give R users easier access to the excellent data at <a href="http://www.countyhealthrankings.org">CountyHealthRankings.org</a>. This package provides their 2014 and 2015 datasets, imported to R as a data.frame, to facilitate use of the data in R. The source of the original data is documented here: <a href="http://www.countyhealthrankings.org/about-project">countyhealthrankings.org/about-project</a> -- I obtained the data 3/27/2015 and slightly modified it to provide 5-digit FIPS as a character field, and the State 2-character abbreviation field renamed as ST.</p>
 
- <p><a href="http://ejanalysis.github.io/countyhealthrankings/countyhealthrankings.pdf">Help documentation as pdf</a></p>
+<p><a href="http://ejanalysis.github.io/countyhealthrankings/countyhealthrankings.pdf">Help documentation as pdf</a></p>
+
+<h3>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation and Related Packages</h3>
+
+<p>This and related packages, once each is made available as a public repository on GitHub, until available on cran, can be installed using the devtools package: </p>
+
+<div class="highlight highlight-r"><pre><span class="pl-k">if</span> (<span class="pl-k">!</span>require(<span class="pl-s"><span class="pl-pds">'</span>devtools<span class="pl-pds">'</span></span>)) install.packages(<span class="pl-s"><span class="pl-pds">'</span>devtools<span class="pl-pds">'</span></span>)
+<span class="pl-e">devtools</span><span class="pl-k">::</span>install_github(<span class="pl-s"><span class="pl-pds">"</span>ejanalysis/analyze.stuff<span class="pl-pds">"</span></span>)
+<span class="pl-e">devtools</span><span class="pl-k">::</span>install_github(<span class="pl-s"><span class="pl-pds">"</span>ejanalysis/countyhealthrankings<span class="pl-pds">"</span></span>)
+<span class="pl-e">devtools</span><span class="pl-k">::</span>install_github(<span class="pl-s"><span class="pl-pds">"</span>ejanalysis/UScensus2010blocks<span class="pl-pds">"</span></span>)
+<span class="pl-e">devtools</span><span class="pl-k">::</span>install_github(<span class="pl-s"><span class="pl-pds">"</span>ejanalysis/ACSdownload<span class="pl-pds">"</span></span>)
+<span class="pl-e">devtools</span><span class="pl-k">::</span>install_github(c(<span class="pl-s"><span class="pl-pds">"</span>ejanalysis/proxistat<span class="pl-pds">"</span></span>, <span class="pl-s"><span class="pl-pds">"</span>ejanalysis/ejanalysis<span class="pl-pds">"</span></span>))
+<span class="pl-e">devtools</span><span class="pl-k">::</span>install_github(<span class="pl-s"><span class="pl-pds">"</span>ejanalysis/ejscreen<span class="pl-pds">"</span></span>)</pre></div>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ejanalysis/countyhealthrankings">Countyhealthrankings</a> is maintained as part of a group of <a href="http://ejanalysis.github.io/">packages related to EJ analysis</a>, by <a href="https://github.com/ejanalysis">ejanalysis</a>.</span>
